templates/assets/cloudformation/elb.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: MU load balancer for an environment
Parameters:
  Namespace:
    Type: String
    Description: Namespace for stack prefixes
  EnvironmentName:
    Type: String
    Description: Name of environment used for resource namespace
  ServiceDiscoveryName:
    Type: String
    Description: Name for the service discovery namespace
  ElbInternal:
    Description: Should ELB be internal?
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  VpcId:
    Type: String
    Description: Name of the value to import for the VpcId
  ElbSubnetIds:
    Type: String
    Description: Name of the value to import for the elb subnet ids
  ElbDomainName:
    Type: String
    Description: The domain name to use for the ELB DNS.  Assumes you have the zone for this DomainName hosted in Route53.  Leave blank to not use DNS for Elb.
    Default: ''
  ElbHostName:
    Type: String
    Description: The host name to use for the ELB DNS.  Prepends in front of ElbDomainName. Pass '.' to create apex record.
    Default: '.'
  ElbCert:
    Type: String
    Description: The identifier for the certificate to use for ELB. Leave blank to disable HTTPS
    Default: ''
  ElbAccessLogsS3BucketName:
    Type: String
    Description: The name of the S3 bucket to write ELB access logs into.
    Default: ''
  ElbAccessLogsS3Prefix:
    Type: String
    Description: The prefix to append to the names of log objects written to bucket.
    Default: 'access-logs'
Conditions:
  HasElbDomainName:
    "Fn::Not":
      - "Fn::Equals":
        - !Ref ElbDomainName
        - ''
  HasElbHostName:
    "Fn::And":
    - "Fn::Not":
      - "Fn::Equals":
        - !Ref ElbHostName
        - '.'
    - "Fn::Not":
      - "Fn::Equals":
        - !Ref ElbHostName
        - '.'
  HasElbCert:
    "Fn::Not":
      - "Fn::Equals":
        - !Ref ElbCert
        - ''
  IsElbInternal:
    "Fn::Equals":
      - !Ref ElbInternal
      - 'true'
  ShouldCreateElbAccessLogsS3Bucket:
    "Fn::Equals":
      - ""
      - !Ref ElbAccessLogsS3BucketName
Mappings:
  Regions:
    us-east-1:
      ElbAccountId: "127311923021"
    us-east-2:
      ElbAccountId: "033677994240"
    us-west-1:
      ElbAccountId: "027434742980"
    us-west-2:
      ElbAccountId: "797873946194"
    ca-central-1:
      ElbAccountId: "985666609251"
    eu-central-1:
      ElbAccountId: "054676820928"
    eu-west-1:
      ElbAccountId: "156460612806"
    eu-west-2:
      ElbAccountId: "652711504416"
    eu-west-3:
      ElbAccountId: "009996457667"
    ap-northeast-1:
      ElbAccountId: "582318560864"
    ap-northeast-2:
      ElbAccountId: "600734575887"
    ap-northeast-3:
      ElbAccountId: "383597477331"
    ap-southeast-1:
      ElbAccountId: "114774131450"
    ap-southeast-2:
      ElbAccountId: "783225319266"
    ap-south-1:
      ElbAccountId: "718504428378"
    sa-east-1:
      ElbAccountId: "507241528517"
    us-gov-west-1:
      ElbAccountId: "048591011584"
    cn-north-1:
      ElbAccountId: "638102146993"
    cn-northwest-1:
      ElbAccountId: "037604701340"
Resources:
  ElbAccessLogsS3Bucket:
    Type: AWS::S3::Bucket
    Condition: ShouldCreateElbAccessLogsS3Bucket
    Properties:
      BucketName:
        !Sub "${Namespace}-alb-${AWS::Region}-${AWS::AccountId}-${EnvironmentName}-access-logs"
  ElbAccessLogsS3BucketPolicy:
    Condition: ShouldCreateElbAccessLogsS3Bucket
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref ElbAccessLogsS3Bucket
      PolicyDocument:
        Version: "2012-10-17"
        Id: ElbAccessLogPolicy
        Statement:
          - Sid: AllowPutObject
            Effect: Allow
            Principal:
              AWS:
                Fn::Sub:
                  - "arn:${AWS::Partition}:iam::${ElbAccountId}:root"
                  - ElbAccountId: !FindInMap [Regions, Ref: "AWS::Region", ElbAccountId]
            Action: s3:PutObject
            Resource: !Sub "arn:${AWS::Partition}:s3:::${ElbAccessLogsS3Bucket}/${ElbAccessLogsS3Prefix}/AWSLogs/${AWS::AccountId}/*"
  ServiceDiscoveryNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Description: !Sub Service Discovery Namespace for ${AWS::StackName}
      Vpc: 
        Fn::ImportValue: !Sub ${VpcId}
      Name: 
        Ref: ServiceDiscoveryName
  ElbInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${VpcId}
      GroupDescription: Microservice Host Security Group allowing ELB access
  ElbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${VpcId}
      GroupDescription: ELB Security Group
  Host2ELB80RuleIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: '80'
      ToPort: '80'
      CidrIp: 0.0.0.0/0
      GroupId: 
        Ref: ElbSG
  Host2ELB443RuleIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: '443'
      ToPort: '443'
      CidrIp: 0.0.0.0/0
      GroupId: 
        Ref: ElbSG
  ELB2HostRuleIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
      SourceSecurityGroupId: !GetAtt ElbSG.GroupId
      GroupId: !GetAtt ElbInstanceSecurityGroup.GroupId
  Elb2HostRuleEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
      DestinationSecurityGroupId: !GetAtt ElbInstanceSecurityGroup.GroupId
      GroupId: !GetAtt ElbSG.GroupId
  Host2ELBRuleIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
      SourceSecurityGroupId: !GetAtt ElbInstanceSecurityGroup.GroupId
      GroupId: !GetAtt ElbSG.GroupId
  Host2ELBRuleEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
      DestinationSecurityGroupId: !GetAtt ElbSG.GroupId
      GroupId: !GetAtt ElbInstanceSecurityGroup.GroupId
  Elb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: !If [ IsElbInternal, "internal", "internet-facing" ]
      Subnets:
        Fn::Split:
        - ","
        - Fn::ImportValue: !Sub ${ElbSubnetIds}
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      - !If [ShouldCreateElbAccessLogsS3Bucket, {"Key": 'mu:bucketpolicy', "Value": {"Ref": "ElbAccessLogsS3BucketPolicy"}}, !Ref 'AWS::NoValue']
      SecurityGroups:
      - !Ref ElbSG
      LoadBalancerAttributes:
      - Key: 'access_logs.s3.enabled'
        Value: !If [ShouldCreateElbAccessLogsS3Bucket, 'true', 'false']
      - !If [ShouldCreateElbAccessLogsS3Bucket, {"Key": 'access_logs.s3.prefix', "Value": {"Ref": "ElbAccessLogsS3Prefix"}}, !Ref 'AWS::NoValue']
      - !If [ShouldCreateElbAccessLogsS3Bucket, {"Key": 'access_logs.s3.bucket', "Value": {"Ref": "ElbAccessLogsS3Bucket"}}, !Ref 'AWS::NoValue']
  ElbHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref Elb
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref ElbDefaultTargetGroup
      Port: '80'
      Protocol: HTTP
  ElbHttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: HasElbCert
    Properties:
      LoadBalancerArn: !Ref Elb
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref ElbDefaultTargetGroup
      Certificates:
        - CertificateArn: !Sub "arn:${AWS::Partition}:acm:${AWS::Region}:${AWS::AccountId}:certificate/${ElbCert}"
      Port: '443'
      Protocol: HTTPS
      SslPolicy: 'ELBSecurityPolicy-TLS-1-2-2017-01'
  ElbDefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: '8080'
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: !Sub ${VpcId}
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-default
  ElbDns:
    Type: AWS::Route53::RecordSetGroup
    Condition: HasElbDomainName
    Properties:
      HostedZoneName: !Sub ${ElbDomainName}.
      Comment: DNS for ELB in ${AWS::StackName}
      RecordSets:
      - Name:
          Fn::If:
          - HasElbHostName
          - Fn::Sub: ${ElbHostName}.${ElbDomainName}.
          - Fn::Sub: ${ElbDomainName}.
        Type: A
        AliasTarget:
          HostedZoneId: !GetAtt Elb.CanonicalHostedZoneID
          DNSName: !GetAtt Elb.DNSName
          EvaluateTargetHealth: true
      - Name:
          Fn::If:
          - HasElbHostName
          - Fn::Sub: '*.${ElbHostName}.${ElbDomainName}.'
          - Fn::Sub: '*.${ElbDomainName}.'
        Type: A
        AliasTarget:
          HostedZoneId: !GetAtt Elb.CanonicalHostedZoneID
          DNSName: !GetAtt Elb.DNSName
          EvaluateTargetHealth: true
Outputs:
  BaseUrl:
    Value:
      Fn::If:
      - HasElbCert
      - Fn::If:
        - HasElbDomainName
        - Fn::If:
          - HasElbHostName
          - !Sub https://${ElbHostName}.${ElbDomainName}
          - !Sub https://${ElbDomainName}
        - !Sub https://${Elb.DNSName}
      - Fn::If:
        - HasElbDomainName
        - Fn::If:
          - HasElbHostName
          - !Sub http://${ElbHostName}.${ElbDomainName}
          - !Sub http://${ElbDomainName}
        - !Sub http://${Elb.DNSName}
    Description: ELB URL
  VpcId:
    Value:
      Fn::ImportValue: !Sub ${VpcId}
    Description: VPC ID for the microservice cluster
    Export:
      Name: !Sub ${AWS::StackName}-VpcId
  ElbInstanceSecurityGroup:
    Value: !Ref ElbInstanceSecurityGroup
    Description: Security Group ID for the microservice instances
    Export:
      Name: !Sub ${AWS::StackName}-InstanceSecurityGroup
  ElbHttpListenerArn:
    Value: !Ref ElbHttpListener
    Description: Arn of the ELB HTTP Listener.
    Export:
      Name: !Sub ${AWS::StackName}-ElbHttpListenerArn
  ElbHttpsListenerArn:
    Condition: HasElbCert
    Value: !Ref ElbHttpsListener
    Description: Arn of the ELB HTTPS Listener.
    Export:
      Name: !Sub ${AWS::StackName}-ElbHttpsListenerArn
  ServiceDiscoveryId:
    Value: !Ref ServiceDiscoveryNamespace
    Description: Id of the Service Discovery Namespace
    Export:
      Name: !Sub ${AWS::StackName}-ServiceDiscoveryId
  ServiceDiscoveryName:
    Value: !Ref ServiceDiscoveryName
    Description: Name of the Service Discovery Namespace
    Export:
      Name: !Sub ${AWS::StackName}-ServiceDiscoveryName
